[metadata]
name = clitogui
version = attr: clitogui.__version__
description = Generate a GUI from (argparse) CLI
long_description = file: README.mkd
author = David Picard
author_email = picard.david1310@yahoo.fr
url = https://github.com/nedgang/clitogui
license =
keywords = GUI, CLI
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Environment :: X11 Applications :: Qt

[options]
zip_safe = False
include_package_data = True
packages = clitogui
install_requires =
    PyQt5==5.11.3

[zest.releaser]
create-wheel = yes
python-file-with-version = clitogui/__init__.py
